--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="one-line">
     <i class="bi bi-flower2 centerpiece"></i>
-    <p>AdoCare</p>
+    <p class="title">AdoCare</p>
 </div>
 
 
@@ -24,7 +24,7 @@
         animation: spin 50s linear infinite;
     }
 
-    p {
+    .title {
         font-size: 2rem;
         color: #5C9EAD;
         margin-top: 20px;
