--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
                                 <a href="{{ url_for('documents.showNavrh') }}" class="navbar-submenu-item" role="menuitem">
                                     Návrh
                                 </a>
-                                <a href="{{ url_for('documents.showDohoda') }}" class="navbar-submenu-item" role="menuitem">
+                                <a href="{{ url_for('documents.showDohoda') }}" class="navbar-submenu-item" role="menuitem" target="_blank">
                                     Dohoda
                                 </a>
                                 <a href="{{ url_for('documents.showZaznam') }}" class="navbar-submenu-item" role="menuitem">
