--- a/templates/base.html
+++ b/templates/base.html
@@ -142,13 +142,13 @@
                         
                             <!-- Second-level menu -->
                             <div class="navbar-submenu" role="menu" aria-label="Dokumenty odkazy">
-                                <a href="{{ url_for('documents.showNavrh') }}" class="navbar-submenu-item" role="menuitem">
+                                <a href="{{ url_for('documents.showNavrh') }}" class="navbar-submenu-item" role="menuitem" target="_blank">
                                     Návrh
                                 </a>
                                 <a href="{{ url_for('documents.showDohoda') }}" class="navbar-submenu-item" role="menuitem" target="_blank">
                                     Dohoda
                                 </a>
-                                <a href="{{ url_for('documents.showZaznam') }}" class="navbar-submenu-item" role="menuitem">
+                                <a href="{{ url_for('documents.showZaznam') }}" class="navbar-submenu-item" role="menuitem" target="_blank">
                                     Ošetrovateľský záznam
                                 </a>
                             </div>         
