--- a/templates/documents/navrh.html
+++ b/templates/documents/navrh.html
@@ -1,140 +1,163 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="sk">
 
-{% block title %}ADOS - Návrh{% endblock %}
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Návrh</title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/sk.js"></script>
 
-{% block content %}
+</head>
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/documents/navrh.css') }}">
+<body>
+    <div class="page" id="page">
+        <h1><b>Návrh na poskytovanie ošetrovateľskej starostlivosti</b></h1>
 
-<h1><b>Návrh na poskytovanie ošetrovateľskej starostlivosti</b></h1>
-
-<form id="mainForm">
-    <div class="inline-form">
-        <label>Zdravotnícke zariadenie: </label>
-        <input type = "text" id="zdravotnickeZariadenie" name="zdravotnickeZariadenie">
-    </div>
-
-    <div class="inline-form">
-        <label>so sídlom v: </label>
-        <input type = "text" id="soSidlomV" name="soSidlomV">
-    </div>
-
-    <div style="width: 600px">
-        <div class="form-group inline-form" style="position: relative;">
-            <label>Meno, priezvisko, titul pacienta/pacientky: </label>
-            <input required type="text" id="patientSearch" name="patientSearch" autocomplete="off"
-                placeholder="Zadaj meno alebo rodné číslo...">
-            <div id="patient-suggestions" class="suggestions"></div>
-        </div>
-
-        <div id="selected-patient" class="selected-patient" style="display: none;">
-            <div class="inline-form special-margin-bottom">
-                <label>Rodné číslo: </label>
-                <p id="rodneCislo"></p>
-                <label>Číslný kód zdravotnej poisťovne: </label>
-                <p id="kodPoistovne"></p>
+        <form id="mainForm">
+            <!-- Zariadenie + sídlo -->
+            <div class="block inline-2">
+                <label>Zdravotnícke zariadenie:</label>
+                <input type="text" id="zdravotnickeZariadenie" name="zdravotnickeZariadenie" class="fill">
+            </div>
+            <div class="block inline-2">
+                <label>so sídlom v:</label>
+                <input type="text" id="soSidlomV" name="soSidlomV" class="fill">
             </div>
 
-            <div class="inline-form">
-                <label>Bydlisko trvalé: </label>
-                <p id="bydliskoTrvale"></p>
+            <!-- Pacient – vyhľadávanie -->
+            <div style="width:160mm">
+                <div class="block inline-2 inline-form">
+                    <label>Meno, priezvisko, titul pacienta/pacientky:</label>
+                    <input required type="text" id="patientSearch" name="patientSearch" autocomplete="off"
+                        placeholder="Zadaj meno alebo rodné číslo…" class="fill" autofocus>
+                    <div id="patient-suggestions" class="suggestions"></div>
+                </div>
+
+                <div id="selected-patient" class="selected-patient">
+                    <div class="inline">
+                        <label>Rodné číslo:</label>
+                        <div id="rodneCislo" class="input w-60">&nbsp;</div>
+                        <label>Číselný kód zdravotnej poisťovne:</label>
+                        <div id="kodPoistovne" class="input w-40">&nbsp;</div>
+                    </div>
+                    <div class="inline-2" style="margin-top:2mm">
+                        <label>Bydlisko trvalé:</label>
+                        <div id="bydliskoTrvale" class="input">&nbsp;</div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
-
-    <div class="inline-form">
-        <label>Bydlisko prechodné: </label>
-        <input required type = "text" id="bydliskoPrechodne" name="bydliskoPrechodne">
-    </div>
-
-    <label>Epikriza a zdôvodnenie pre poskytovanie ošetrovateĺskej starostlivosti: </label>
-    <input required type = "text" id="epikriza" name="epikriza">
-
-    <div class="form-group" style="position: relative;">
-        <label for="diagnoza">Lekárská diagnóza (slovom alebo čislom podĺa MKCH):</label>
-        <input type="text" id="lekarskaDiagnoze" name="lekarskaDiagnoze" autocomplete="off">
-        <input type="hidden" id="diagnoza_id">
-        <div id="diagnoza-suggestions" class="suggestions"></div>
-    </div>
-
-    <label>Sestrská diagnóza (slovom alebo čislom podĺa Zoznamu sesterských diagnz): </label>
-    <input required type = "text" id="sesterskaDiagnoza" name="sesterskaDiagnoza">
-
-
-    <div class="checkbox-container navrh-checkbox-container">
-        <input type="checkbox" id="HCheckBox">
-        <label for="HCheckBox">H - pacient/pacientka s obmedzenou pohyblivosťou</label>
-        <label for="HCheckBox">(50%)</label>
-    </div>
-    <div class="checkbox-container navrh-checkbox-container">
-        <input type="checkbox" id="ICheckBox">
-        <label for="ICheckBox">I - imobilný pacient/pacientka</label>
-        <label for="ICheckBox">(75%)</label>
-    </div>
-    <div class="checkbox-container navrh-checkbox-container">
-        <input type="checkbox" id="FCheckBox">
-        <label for="FCheckBox">F - pacient/pacientka s psychiatrickou diagnózou,<br>mentálne retardovaný pacient-pacientka</label>
-        <label for="FCheckBox">(75%)</label>
-    </div>
-
-    <label><b>Plán ošetrovateĺskej startostlivosti:</b></label>
-    <input required type = "text" id="PlanOsStarostlivosty" name="PlanOsStarostlivosty">
-
-    <label>Výkony vyjadré kódom a ich frekvencia realizácie:</label>
-    <input required type = "text" id="Vykony" name="Vykony">
-
-    <label><b>Predpokladná dĺžka ošetrovateĺskej starostlivosti:</b></label>
-
-    <div class="radio-group">
-        <label class="radio-option">
-          <input type="radio" name="duration" value="1">
-          do 1 mesiaca
-        </label>
-        <label class="radio-option">
-          <input type="radio" name="duration" value="3">
-          do 3 mesiacov
-        </label>
-        <label class="radio-option">
-          <input type="radio" name="duration" value="6">
-          do 6 mesiacov
-        </label>
-        <label class="radio-option">
-          <input type="radio" name="duration" value="more">
-          nad 6 mesiacov
-        </label>
-    </div>
-
-    <label><b>Meno, priezvisko lekára, ktorý ošetrovateĺskú starostlivosť navrhoval:</b></label>
-    <input required type = "text" id="lekar" name="lekar">
-
-    <div class="footer">
-        <div class="inline-form">
-            <label>Dátum:</label>
-            <input type="text" name="currentDate", id="currentDate" class="date-input" placeholder="DD.MM.YYYY" maxlength="10">
-        </div>
-
-        <div class="inline-form sign">
-            <div class="special-margin">
-                <label>........................</label>
-                <br>
-                <label>podpis lekára<br>a odtlačok pečiatky</label>
+            <!-- Prechodné bydlisko -->
+            <div class="block inline-2">
+                <label>Bydlisko prechodné:</label>
+                <input required type="text" id="bydliskoPrechodne" name="bydliskoPrechodne" class="fill">
             </div>
-            <div>
-                <label>............................................................................</label>
-                <br>
-                <label>podpis odborného zástupcu poskytovateĺa<br>ošetrovateĺskej starostlivosti a sdtlačok pečiatky</label>
-            </div>
-        </div>
-    </div>
-</form>
-<button id="printButton" class="button no-print">Print document</button>
 
-{% endblock %}
+            <!-- Veľké textové bloky -->
+            <div class="block">
+                <label>Epikríza a zdôvodnenie pre poskytovanie ošetrovateľskej starostlivosti:</label>
+                <textarea id="epikriza" name="epikriza" class="multiline" rows="5"></textarea>
+            </div>
+
+            <div class="block inline-2 form-group" style="position:relative">
+                <label for="lekarskaDiagnoze">Lekárska diagnóza (slovom alebo číslom podľa MKCH):</label>
+                <input type="text" id="lekarskaDiagnoze" name="lekarskaDiagnoze" autocomplete="off" class="fill">
+                <input type="hidden" id="diagnoza_id">
+                <div id="diagnoza-suggestions" class="suggestions"></div>
+            </div>
+
+            <div class="block">
+                <label>Sesterská diagnóza (slovom alebo číslom podľa Zoznamu sesterských diagnóz):</label>
+                <textarea id="sesterskaDiagnoza" name="sesterskaDiagnoza" class="multiline" rows="2"></textarea>
+            </div>
+
+            <!-- Checkboxes H/I/F -->
+            <div class="checkboxes">
+                <label class="checkbox-container navrh-checkbox-container">
+                    <input type="checkbox" id="HCheckBox">
+                    <span>H – pacient/pacientka s obmedzenou pohyblivosťou</span>
+                    <span class="pct">(50%)</span>
+                </label>
+                <label class="checkbox-container navrh-checkbox-container">
+                    <input type="checkbox" id="ICheckBox">
+                    <span>I – imobilný pacient/pacientka</span>
+                    <span class="pct">(75%)</span>
+                </label>
+                <label class="checkbox-container navrh-checkbox-container">
+                    <input type="checkbox" id="FCheckBox">
+                    <span>F – pacient/pacientka s psychiatrickou diagnózou, mentálne retardovaný pacient/pacientka</span>
+                    <span class="pct">(75%)</span>
+                </label>
+            </div>
+
+            <!-- Plán + výkony (viac riadkov) -->
+            <div class="block">
+                <label><b>Plán ošetrovateľskej starostlivosti:</b></label>
+                <textarea id="PlanOsStarostlivosty" name="PlanOsStarostlivosty" class="multiline" rows="3"></textarea>
+            </div>
+
+            <div class="block">
+                <label>Výkony vyjadrené kódom a ich frekvencia realizácie:</label>
+                <textarea id="Vykony" name="Vykony" class="multiline" rows="2"></textarea>
+            </div>
+
+            <!-- Predpokladaná dĺžka -->
+            <div class="block">
+                <label><b>Predpokladaná dĺžka ošetrovateľskej starostlivosti:</b></label>
+                <div class="radio-group">
+                    <label class="radio-option"><input type="radio" name="duration" value="1"> do 1 mesiaca</label>
+                    <label class="radio-option"><input type="radio" name="duration" value="3"> do 3 mesiacov</label>
+                    <label class="radio-option"><input type="radio" name="duration" value="6"> do 6 mesiacov</label>
+                    <label class="radio-option"><input type="radio" name="duration" value="more"> nad 6 mesiacov</label>
+                </div>
+            </div>
+
+            <!-- Lekár, dátum, podpisy -->
+            <div class="block">
+                <label><b>Meno, priezvisko lekára, ktorý ošetrovateľskú starostlivosť navrhoval:</b></label>
+                <input required type="text" id="lekar" name="lekar" class="fill">
+            </div>
+
+            <div class="footer">
+                <div class="inline-2">
+                    <label>Dátum:</label>
+                    <input type="text" name="currentDate" id="currentDate" class="w-40" placeholder="DD.MM.YYYY"
+                        maxlength="10">
+                </div>
+
+                <div class="signatures sign">
+                    <div>
+                        <div class="sig-line"></div>
+                        <div class="sig-caption small">podpis lekára<br>a odtlačok pečiatky</div>
+                    </div>
+                    <div>
+                        <div class="sig-line"></div>
+                        <div class="sig-caption small">podpis odborného zástupcu poskytovateľa<br>ošetrovateľskej
+                            starostlivosti a odtlačok pečiatky</div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="no-print">
+        <button id="printButton" class="btn" type="button">Vytlačiť</button>
+    </div>
+</body>
+
 
 {% block scripts %}
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/sk.js"></script>
 <script src="{{ url_for('static', filename='js/documents/navrh.js') }}"></script>
 <script src="{{ url_for('static', filename='js/documents/navrhIllnessList.js') }}"></script>
+{% endblock %}
+
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/documents/dohoda.css') }}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 {% endblock %}
