--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;700&display=swap">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
@@ -25,6 +25,7 @@
     <script src="{{ url_for('static', filename='js/create/macro.js') }}"></script>
     <script src="{{ url_for('static', filename='js/create/car.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bodovanie/bodovanie.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/details/vykony.js') }}"></script>
 
 </head>
 
@@ -65,6 +66,10 @@
                     <div class="navbar-popup" role="menu" aria-label="Dashboard odkazy">
                         <a href="{{ url_for('doctor.doctor_settings') }}" class="navbar-popup-item" data-popup>
                             <i class="bi bi-person"></i> Doktori
+                        </a>
+                        <a class="navbar-popup-item" href="{{ url_for('vykon.list_vykony') }}" target="_blank" role="menuitem" data-popup
+                            title="Upraviť ceny">
+                            <i class="bi bi-coin"></i> Ceny výkonov
                         </a>
                         <a class="navbar-popup-item" href="{{ url_for('diagnosis.list_diagnoses') }}" role="menuitem" data-popup
                             title="Prehľadávať diagnózy">
