--- a/templates/dekurzy/vypis.html
+++ b/templates/dekurzy/vypis.html
@@ -15,7 +15,7 @@
             </button>
             <div class="scroll" id="patientScroll">
                 {% for patient in patients %}
-                <a href="#" class="small-small-token month-select" data-id="{{ patient.id }}"
+                <a href="#" class="small-small-token patient-select" data-id="{{ patient.id }}"
                     data-rodne-cislo="{{ patient.rodne_cislo }}" data-meno="{{ patient.meno }}" data-adresa="{{ patient.adresa }}"
                     data-poistovna="{{ patient.poistovna }}" data-ados="{{ patient.ados }}" data-sestra="{{ patient.sestra }}"
                     data-odosielatel="{{ patient.odosielatel }}" data-pohlavie="{{ patient.pohlavie }}"
