--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <script src="{{ url_for('static', filename='js/details/diagnoses.js') }}"></script>
     <script src="{{ url_for('static', filename='js/create/macro.js') }}"></script>
     <script src="{{ url_for('static', filename='js/create/car.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bodovanie/bodovanie.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/create/bodovanie.js') }}"></script>
     <script src="{{ url_for('static', filename='js/details/vykony.js') }}"></script>
 
 </head>
